Fix reCaptcha position in reveals
Currently if a recaptcha (v2) in a Reveal is active it is not visible and therefore can't be submitted. This fixes it.
Only tested with the Formidable Forms Plugin, but should be an issue with all implementations.

--- a/src/assets/scss/global/_global.scss
+++ b/src/assets/scss/global/_global.scss
@@ -11,3 +11,9 @@
 .full-width {
 	@include full-width;
 }
+
+/* fix recaptcha position in reveals */
+.is-reveal-open .recaptcha-wrapper {
+	position: fixed !important;
+	z-index: 99999;
+}
